--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name"       : "johnbillion/extended-cpts",
-	"description": "A library which provides extended functionality to WordPress custom post types, allowing you to quickly build custom post types without having to write the same code again and again.",
+	"description": "A library which provides extended functionality to WordPress custom post types, allowing developers to quickly build custom post types without having to write the same code again and again.",
 	"homepage"   : "https://github.com/johnbillion/ExtendedCPTs/",
 	"license"    : "GPL-2.0+",
 	"authors"    : [
