--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,24 @@
 language: php
 
 php:
+    - 5.2
     - 5.3
-    - 5.4
+    - 5.6
+    - hhvm
 
 env:
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=1
+    - WP_VERSION=4.0 WP_MULTISITE=0
+    - WP_VERSION=4.0 WP_MULTISITE=1
     - WP_VERSION=3.9 WP_MULTISITE=0
     - WP_VERSION=3.9 WP_MULTISITE=1
+
+matrix:
+    allow_failures:
+        - env: WP_VERSION=latest WP_MULTISITE=0
+        - env: WP_VERSION=latest WP_MULTISITE=1
+        - php: hhvm
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
