--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,14 @@ matrix:
         - env: WP_VERSION=latest WP_MULTISITE=1
         - php: hhvm
 
+install:
+    - composer install --dev --no-interaction
+
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
 
-script: phpunit
+script:
+    - phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+    - php vendor/bin/coveralls
