--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 		"composer/installers": "~1.0"
 	},
 	"require-dev" : {
+		"satooshi/php-coveralls": "dev-master",
 		"phpunit/phpunit": ">=3.7"
 	},
 	"suggest": {
