--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: php
 
 php:
+    - 7.0
     - 5.6
     - 5.3
     - hhvm
@@ -14,6 +15,7 @@ env:
 matrix:
     allow_failures:
         - php: hhvm
+        - php: 7.0
 
 install:
     - composer install --dev --no-interaction
