--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,20 @@ php:
     - hhvm
 
 env:
-    - WP_VERSION=4.3 WP_MULTISITE=0
-    - WP_VERSION=4.3 WP_MULTISITE=1
+    # nightly:
+    - WP_VERSION=nightly WP_MULTISITE=0
+    - WP_VERSION=nightly WP_MULTISITE=1
+    # latest stable:
+    - WP_VERSION=latest WP_MULTISITE=0
+    - WP_VERSION=latest WP_MULTISITE=1
 
 matrix:
     allow_failures:
+        # allow failures on PHP 7:
         - php: 7.0
+        # allow failures on nightlies:
+        - env: WP_VERSION=nightly WP_MULTISITE=0
+        - env: WP_VERSION=nightly WP_MULTISITE=1
 
 install:
     - composer install --dev --no-interaction
