--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"composer/installers": "~1.0"
 	},
 	"require-dev" : {
-		"satooshi/php-coveralls": "dev-master",
+		"satooshi/php-coveralls": ">=0.7.0",
 		"phpunit/phpunit": ">=3.7"
 	},
 	"suggest": {
