--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	},
 	"require-dev" : {
 		"satooshi/php-coveralls": ">=0.7.0",
-		"phpdocumentor/reflection-docblock": "~2.0",
+		"johnbillion/wp-docs-standards": "*",
 		"phpunit/phpunit": ">=3.7"
 	},
 	"suggest": {
