--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
 
 script:
-    - phpunit --coverage-clover build/logs/clover.xml
+    - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
     - php vendor/bin/coveralls
