--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
 			"homepage": "https://johnblackbourn.com/"
 		}
 	],
+	"autoload": {
+		"files": [
+			"extended-cpts.php"
+		]
+	}
 	"require": {
 		"php": ">=5.4",
 		"composer/installers": "~1.0"
