--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
 		"johnbillion/wp-docs-standards": "*",
 		"phpunit/phpunit": ">=3.7"
 	},
+	"autoload": {
+		"classmap": ["extended-cpts.php"]
+	},
 	"suggest": {
 		"johnbillion/extended-taxos": "Extended Taxonomies",
 		"wpackagist-plugin/rewrite-testing": "Rewrite Rule Testing"
