--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	},
 	"require-dev" : {
 		"satooshi/php-coveralls": "~1.0",
-		"johnbillion/php-docs-standards": "^1.0.2",
+		"johnbillion/php-docs-standards": "~1.1",
 		"phpunit/phpunit": "~5.7"
 	},
 	"suggest": {
