--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		"php": ">=7.0"
 	},
 	"require-dev" : {
-		"satooshi/php-coveralls": "~1.0",
+		"satooshi/php-coveralls": "dev-master",
 		"johnbillion/php-docs-standards": "~1.1",
 		"phpunit/phpunit": "~5.7"
 	},
