Another Coveralls update.

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,5 @@ before_script:
 script:
     - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
-after_script:
-    - php vendor/bin/coveralls
+after_success:
+    - travis_retry php vendor/bin/coveralls
