--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name"       : "johnbillion/extended-cpts",
-	"description": "A library which provides extended functionality to WordPress custom post types, allowing developers to quickly build custom post types without having to write the same code again and again.",
+	"description": "A library which provides extended functionality to WordPress custom post types and taxonomies.",
 	"homepage"   : "https://github.com/johnbillion/extended-cpts/",
 	"license"    : "GPL-2.0+",
 	"authors"    : [
@@ -17,7 +17,6 @@
 		"phpunit/phpunit": "~5.7"
 	},
 	"suggest": {
-		"johnbillion/extended-taxos": "Extended Taxonomies",
 		"wpackagist-plugin/rewrite-testing": "Rewrite Rule Testing"
 	},
 	"autoload": {
