--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,9 @@ script:
     - |
       export WP_MULTISITE=1
       ./vendor/bin/phpunit -v --exclude-group=ms-excluded --coverage-clover coverage.xml
+    - |
+      ./vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs
+      ./vendor/bin/phpcs -n -p -s --colors .
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
