--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 		"php": ">=7.0"
 	},
 	"require-dev" : {
+        "wp-coding-standards/wpcs": "^0.13.0",
 		"johnbillion/php-docs-standards": "~1.1",
 		"phpunit/phpunit": "~5.7"
 	},
