--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -4,9 +4,7 @@
 	<exclude-pattern>*/tests/*</exclude-pattern>
 	<exclude-pattern>*/vendor/*</exclude-pattern>
 
-	<rule ref="WordPress-VIP">
-		<exclude name="WordPress.Files.FileName" />
-	</rule>
+	<rule ref="WordPress-VIP"/>
 
 	<rule ref="WordPress.WP.I18n">
 		<properties>
