--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ cache:
       - vendor
 
 notifications:
-    on_success: change
-    on_failure: always
+    email:
+        on_success: change
+        on_failure: always
 
 php:
     - 7.1
