--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,10 @@ matrix:
         - env: WP_VERSION=nightly
 
 install:
-    - composer install --dev --no-interaction
+    - composer install --no-interaction
 
 before_script:
-    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
+    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script:
     - |
