--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,11 @@
 * text=auto
 
+/.gitattributes export-ignore
+/.gitignore export-ignore
 /tests export-ignore
 /bin export-ignore
 /.travis.yml export-ignore
 /CONTRIBUTING.md export-ignore
-/README.md export-ignore
 /changelog.md export-ignore
-/phpunit-ms.xml.dist export-ignore
+/phpcs.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
