--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	},
 	"require-dev" : {
         "wp-coding-standards/wpcs": "^0.13.0",
-		"johnbillion/php-docs-standards": "~1.1",
+		"johnbillion/php-docs-standards": "^1.2",
 		"phpunit/phpunit": "~5.7"
 	},
 	"suggest": {
