--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ env:
     - WP_VERSION=nightly
 
 matrix:
+    fast_finish: true
     allow_failures:
         # allow failures on nightlies:
         - env: WP_VERSION=nightly
