--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -4,7 +4,9 @@
 	<exclude-pattern>*/tests/*</exclude-pattern>
 	<exclude-pattern>*/vendor/*</exclude-pattern>
 
-	<rule ref="WordPress-VIP"/>
+	<rule ref="WordPress-VIP">
+		<exclude name="WordPress.NamingConventions.ValidHookName.UseUnderscores" />
+	</rule>
 
 	<rule ref="WordPress.WP.I18n">
 		<properties>
