--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ script:
       ./vendor/bin/phpunit -v --exclude-group=ms-required
     - |
       export WP_MULTISITE=1
-      ./vendor/bin/phpunit -v --exclude-group=ms-excluded --coverage-clover coverage.xml
+      ./vendor/bin/phpunit -v --exclude-group=ms-excluded
     - |
       ./vendor/bin/phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs
       ./vendor/bin/phpcs -n -p -s --colors .
