--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <ruleset name="Extended CPTs">
 
+	<config name="installed_paths" value="../../wp-coding-standards/wpcs" />
+
 	<exclude-pattern>*/tests/*</exclude-pattern>
 	<exclude-pattern>*/vendor/*</exclude-pattern>
 
