--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,12 @@
 		"php": "^7.0"
 	},
 	"require-dev": {
+		"automattic/phpcs-neutron-standard": "^1.5",
 		"johnbillion/php-docs-standards": "^1.2",
 		"phpunit/phpunit": "^5.7",
 		"slevomat/coding-standard": "^4.0",
-		"wp-coding-standards/wpcs": "^0.13.0"
+		"wimg/php-compatibility": "^8",
+		"wp-coding-standards/wpcs": "1.0"
 	},
 	"autoload": {
 		"files": [
