Switch to Composer dependencies for the unit testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,26 +20,23 @@ php:
     - 7.0
 
 env:
-    # latest:
-    - WP_VERSION=latest
-    # nightly:
-    - WP_VERSION=nightly
+    # WP latest stable:
+    - WP_VERSION=*
+    # WP nightly:
+    - WP_VERSION=dev-nightly
 
 matrix:
     fast_finish: true
 
-install:
-    - composer install --no-interaction
+before_install:
+  - |
+    if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
+      phpenv config-rm xdebug.ini
+    fi
 
-before_script:
-    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+install:
+  - travis_retry composer install --no-suggest
+  - travis_retry composer require --dev --update-with-dependencies --no-suggest roots/wordpress="${WP_VERSION} || *" wp-phpunit/wp-phpunit="${WP_VERSION} || *"
 
 script:
-    - |
-      export WP_MULTISITE=0
-      ./vendor/bin/phpunit -v --exclude-group=ms-required
-    - |
-      export WP_MULTISITE=1
-      ./vendor/bin/phpunit -v --exclude-group=ms-excluded
-    - |
-      ./vendor/bin/phpcs -n -p -s --colors .
+  - composer test
