Add testing on WP 4.9 to catch any issues with pre-Gutenberg functionality.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ php:
     - 7.0
 
 env:
+    # WP pre-Gutenberg:
+    - WP_VERSION=4.9
     # WP latest stable:
     - WP_VERSION=*
     # WP nightly:
