--- a/composer.json
+++ b/composer.json
@@ -32,18 +32,15 @@
 		"wp-phpunit/wp-phpunit": "*"
 	},
 	"scripts": {
-		"test:setup": [
-			"vendor/bin/wp db reset --yes --path=tests/wordpress"
-		],
 		"test:cs": [
 			"vendor/bin/phpcs -nps --colors --report-code --report-summary --report-width=80 ."
 		],
 		"test:ut": [
+			"vendor/bin/wp db reset --yes --path=tests/wordpress",
 			"export WP_MULTISITE=0 && vendor/bin/phpunit --verbose --colors=always --exclude-group=ms-required",
 			"export WP_MULTISITE=1 && vendor/bin/phpunit --verbose --colors=always --exclude-group=ms-excluded"
 		],
 		"test": [
-			"@test:setup",
 			"@test:cs",
 			"@test:ut"
 		]
