--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
 		"wp-phpunit/wp-phpunit": "*"
 	},
 	"scripts": {
+		"post-update-cmd": [
+			"@php -r \"! file_exists( 'tests/.env' ) && copy( 'tests/.env.dist', 'tests/.env' );\""
+		],
 		"test:cs": [
 			"vendor/bin/phpcs -nps --colors --report-code --report-summary --report-width=80 ."
 		],
