Specify a PHPCS cache directory and cache it on Travis.

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
 			"@php -r \"! file_exists( 'tests/.env' ) && copy( 'tests/.env.dist', 'tests/.env' );\""
 		],
 		"test:cs": [
-			"vendor/bin/phpcs -nps --colors --report-code --report-summary --report-width=80 ."
+			"vendor/bin/phpcs -nps --colors --report-code --report-summary --report-width=80 --cache=tests/cache/phpcs ."
 		],
 		"test:ut": [
 			"vendor/bin/wp db reset --yes --path=tests/wordpress #",
