Recommend the Custom Bulk Actions library, it's quite handy.

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
 		]
 	},
 	"suggest": {
+		"seravo/wp-custom-bulk-actions": "Custom Bulk Actions",
 		"wpackagist-plugin/rewrite-testing": "Rewrite Rule Testing"
 	}
 }
