--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,10 @@
 * text=auto
 
+/tests export-ignore
+/.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/tests export-ignore
-/bin export-ignore
 /.travis.yml export-ignore
 /CONTRIBUTING.md export-ignore
-/changelog.md export-ignore
 /phpcs.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
