--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 		"roots/wordpress": "*",
 		"vlucas/phpdotenv": "^3",
 		"wp-cli/wp-cli-bundle": "^2.1",
-		"wp-coding-standards/wpcs": "^2",
+		"wp-coding-standards/wpcs": "~2.1.0",
 		"wp-phpunit/wp-phpunit": "*"
 	},
 	"scripts": {
