--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,9 @@
 * text=auto
 
 /.gitattributes export-ignore
+/.github export-ignore
 /.gitignore export-ignore
 /tests export-ignore
-/bin export-ignore
-/.travis.yml export-ignore
 /CONTRIBUTING.md export-ignore
-/changelog.md export-ignore
 /phpcs.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
