--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -21,6 +21,8 @@
 	<!-- Include the WordPress-Extra standard. -->
 	<rule ref="WordPress-Extra">
 		<exclude name="PEAR.Functions.FunctionCallSignature"/>
+		<exclude name="Generic.Arrays.DisallowShortArraySyntax"/>
+		<exclude name="WordPress.DateTime.RestrictedFunctions.date_date"/>
 	</rule>
 
 	<rule ref="WordPress.WP.I18n">
