--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,11 +44,12 @@ jobs:
         key: ${{ matrix.php }}-${{ env.cache-name }}-${{ hashFiles('extended-cpts.php') }}
 
     - name: Install PHP
-      uses: shivammathur/setup-php@2.1.3
+      uses: shivammathur/setup-php@2.7.0
       with:
         php-version: ${{ matrix.php }}
         extensions: mysqli, xmlwriter
         coverage: none
+        tools: composer:v1
 
     - name: Debugging
       run: |
