--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"wordpress-install-dir": "tests/wordpress"
 	},
 	"require": {
-		"php": "^7.0"
+		"php": "^7 | ^8"
 	},
 	"require-dev": {
 		"automattic/phpcs-neutron-standard": "1.6.0",
