Switch to testing against a fixed WP version for stability. We'll introduce an action later for testing against trunk.

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 		"johnbillion/falsey-assertequals-detector": "^2",
 		"phpcompatibility/phpcompatibility-wp": "^2",
 		"phpunit/phpunit": "^6",
-		"roots/wordpress": "*",
+		"roots/wordpress": "^5.7.0",
 		"vlucas/phpdotenv": "^3",
 		"wp-cli/db-command": "^2.0",
 		"wp-coding-standards/wpcs": "2.3.0",
