--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 		"vlucas/phpdotenv": "^3",
 		"wp-cli/db-command": "^2.0",
 		"wp-coding-standards/wpcs": "2.3.0",
-		"wp-phpunit/wp-phpunit": "*"
+		"wp-phpunit/wp-phpunit": "^5.7.0"
 	},
 	"scripts": {
 		"post-update-cmd": [
