--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,10 @@
 name: Test
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  # Once weekly On Wednesdays at 02:00 UTC.
+  schedule:
+    - cron: '0 2 * * 3'
 
 jobs:
   build:
