--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,7 @@ jobs:
       run: |
         sudo systemctl start mysql.service
         composer require --dev --update-with-dependencies --no-suggest --prefer-dist roots/wordpress="${{ matrix.wp }}" wp-phpunit/wp-phpunit="${{ matrix.wp }} || *"
+        composer install --prefer-dist --no-suggest
 
     - name: Run the tests
       run: composer test
