--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,11 @@ jobs:
     strategy:
       matrix:
         php: ['7.4', '7.0']
-        wp: ['5.6', '5.7']
         include:
           - php: '7.2'
             wp: '4.9'
       fail-fast: false
-    name: WP ${{ matrix.wp }} / PHP ${{ matrix.php }}
+    name: PHP ${{ matrix.php }}
     runs-on: ubuntu-18.04
     steps:
     - name: Checkout repository
@@ -57,7 +56,6 @@ jobs:
       run: |
         sudo systemctl start mysql.service
         composer install --prefer-dist
-        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress="^${{ matrix.wp }}.0" wp-phpunit/wp-phpunit="^${{ matrix.wp }}.0"
 
     - name: Run the tests
       run: composer test
