--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     strategy:
       matrix:
-        php: ['7.4', '7.2']
+        php: ['7.4']
         wp: ['5.7']
         include:
           - php: '7.2'
