--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -13,6 +13,9 @@ parameters:
     ignoreErrors:
         # Uses func_get_args()
         - '#^Function apply_filters invoked with [34567] parameters, 2 required\.$#'
+        # We'll come back to these
+        - '#^Parameter \#1 \$text of function esc_html expects string#'
+        - '#^Parameter \#1 \$url of function esc_url expects string#'
         # p2p plugin
         - '#^Used function (p2p_type|p2p_connection_exists) not found\.$#'
         - '#^Function (p2p_type|p2p_connection_exists) not found\.$#'
