--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,6 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[{*.json,*.yml}]
+[{*.json,*.yml,*.neon,*.neon.dist}]
 indent_style = space
 indent_size = 2
