--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,7 +1,7 @@
 includes:
     - vendor/szepeviktor/phpstan-wordpress/extension.neon
 parameters:
-    level: max
+    level: 8
     inferPrivatePropertyTypeFromConstructor: true
     paths:
         - functions.php
