--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
 		"preferred-install": "dist"
 	},
 	"extra": {
+    "branch-alias": {
+      "dev-develop": "5.0-dev"
+    },
 		"wordpress-install-dir": "tests/wordpress"
 	},
 	"require": {
