--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 	"require-dev": {
 		"automattic/phpcs-neutron-standard": "1.7.0",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-		"johnbillion/falsey-assertequals-detector": "^2",
+		"johnbillion/falsey-assertequals-detector": "*",
 		"phpcompatibility/phpcompatibility-wp": "^2",
 		"phpstan/phpstan": "1.0.0",
 		"phpunit/phpunit": "^6",
