--- a/.editorconfig
+++ b/.editorconfig
@@ -15,6 +15,6 @@ trim_trailing_whitespace = false
 indent_style = space
 indent_size = 4
 
-[{*.json,*.yml}]
+[*.yml]
 indent_style = space
 indent_size = 2
