--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,11 @@
 	],
 	"config": {
 		"sort-packages": true,
-		"preferred-install": "dist"
+		"preferred-install": "dist",
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"roots/wordpress-core-installer": true
+		}
 	},
 	"extra": {
 		"branch-alias": {
