--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/codeception.dist.yml export-ignore
 /CONTRIBUTING.md export-ignore
 /phpcs.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
