--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,9 @@ jobs:
       matrix:
         php: ['7.4']
         wp: ['5.8','5.6']
+        include:
+          - php: '8.0'
+            wp: '5.8'
       fail-fast: false
     name: WP ${{ matrix.wp }} / PHP ${{ matrix.php }}
     runs-on: ubuntu-18.04
