--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,7 +62,7 @@ jobs:
         sudo systemctl start mysql.service
         composer install --prefer-dist
         composer require --dev --update-with-dependencies --prefer-dist roots/wordpress="~${{ matrix.wp }}.0" wp-phpunit/wp-phpunit="~${{ matrix.wp }}.0"
-        mysqladmin create wordpress_test
+        mysqladmin -u root -p root create wordpress_test
 
     - name: Run the tests
       run: composer test
