--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 		"johnbillion/falsey-assertequals-detector": "*",
 		"lucatume/wp-browser": "^3.0",
 		"phpcompatibility/phpcompatibility-wp": "^2",
-		"phpstan/phpstan": "1.0.0",
+		"phpstan/phpstan": "^1.0",
 		"phpunit/phpunit": "^9",
 		"roots/wordpress": "^5.8.0",
 		"szepeviktor/phpstan-wordpress": "^1.0",
