This isn't needed any more.

--- a/.github/workflows/test-nightly.yml
+++ b/.github/workflows/test-nightly.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         sudo systemctl start mysql.service
         composer install --prefer-dist
-        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress="dev-nightly" wp-phpunit/wp-phpunit="dev-master"
+        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress="dev-nightly"
         mysqladmin -uroot -proot create wordpress_test
 
     - name: Run the tests
