--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,7 +61,7 @@ jobs:
       run: |
         sudo systemctl start mysql.service
         composer install --prefer-dist
-        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress="~${{ matrix.wp }}.0" wp-phpunit/wp-phpunit="~${{ matrix.wp }}.0"
+        composer require --dev --update-with-dependencies --prefer-dist roots/wordpress="~${{ matrix.wp }}.0"
         mysqladmin -uroot -proot create wordpress_test
 
     - name: Run the tests
