--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
         include:
           - php: '8.0'
             wp: '5.8'
+          - php: '8.1'
+            wp: '5.8'
       fail-fast: false
     name: WP ${{ matrix.wp }} / PHP ${{ matrix.php }}
     runs-on: ubuntu-18.04
@@ -68,6 +70,7 @@ jobs:
       run: composer test:integration
 
     - name: Run the code sniffers
+      if: matrix.php == '7.4'
       run: |
         composer test:cs
         composer test:analyze
