Let's reinstate the old WP-CLI setup to get around the mysqli exception.

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
 		"phpunit/phpunit": "^9",
 		"roots/wordpress": "^5.8.0",
 		"szepeviktor/phpstan-wordpress": "^1.0",
+		"vlucas/phpdotenv": "^3",
+		"wp-cli/core-command": "^2",
+		"wp-cli/db-command": "^2",
 		"wp-coding-standards/wpcs": "2.3.0"
 	},
 	"scripts": {
@@ -49,6 +52,8 @@
 			"phpstan analyze"
 		],
 		"test:integration": [
+			"wp --path=tests/wordpress db reset --yes",
+			"wp --path=tests/wordpress core install --title=\"Example\" --admin_user=\"admin\" --admin_password=\"admin\" --admin_email=\"admin@example.com\" --skip-email --url=http://example.org",
 			"codecept run integration"
 		],
 		"test": [
