Switch to PSR-4 autoloading.

--- a/composer.json
+++ b/composer.json
@@ -64,10 +64,11 @@
 	},
 	"autoload": {
 		"psr-4": {
+			"ExtCPTs\\": "src",
 			"ExtCPTs\\Tests\\": "tests/integration"
 		},
 		"files": [
-			"extended-cpts.php"
+			"functions.php"
 		]
 	},
 	"suggest": {
